[package]
name = "llmtoolbox"
description="A common API for turning Rust code into callable functions for llms"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/mcmah309/llmtoolbox"
license = "Apache-2.0"

[dependencies]
llmtool = { version = "=0.0.1", path = "llmtool" }

serde_json = "1"
error_set = "0.7.0"
jsonschema = "0.26"

[dev-dependencies]
func_me = {git = "https://github.com/rseymour/func_me.git" }