[package]
name = "llmtoolbox"
description="A common API for turning Rust code into callable functions for llms"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/mcmah309/llmtoolbox"
license = "Apache-2.0"

[dependencies]
llmtool = { version = "=0.0.1", path = "llmtool" }

serde_json = "1"
error_set = "0.8.2"
jsonschema = "0.26"
async-trait = "0.1.83"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
schemars = "0.8.21"