[package]
name = "llmtoolbox"
description = "A common API for turning Rust code into callable functions for llms"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/mcmah309/llmtoolbox"
license = "Apache-2.0"

[dependencies]
llmtool = { version = "=0.3.1", path = "llmtool" }
error_set = "0.8"

serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
schemars = "=1.0.0-alpha.17"
serde = { version = "1", features = ["serde_derive"] }
async-trait = "0.1"
