[package]
name = "llmtool"
description = "The macro for the llmtoolbox crate"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/mcmah309/llmtoolbox"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
syn = { "version" = "*", "features" = ["full"] }
quote = "*"
proc-macro2 = "*"
serde_json = { "version" = "1.0.125", "features" = ["raw_value"] }
regex = "1.11.1"