[package]
name = "llmtool"
description = "The macro for the llmtoolbox crate"
version = "0.3.3"
edition = "2021"
repository = "https://github.com/mcmah309/llmtoolbox"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
regex = "1"